<resources>
    <string name="app_name">LanguageLearningApp</string>
    <string name="action_settings">Settings</string>
    <string name="splash_greeting">Welcome to your Language Learning App 😊</string>
    <string name="home_page_title">My Dictionary</string>
    <string name="search_hint">Search words&#8230;</string> <!-- &#8230; ====> '...'  -->
    <string name="word_name">\u2022 Word Name</string>
    <string name="meaning">Description</string>Description
    <string name="cambridge_dictionary_link_text">(Consult The Cambridge Dictionary)</string>
    <string name="word_name_hint">Enter Word</string>
    <string name="meaning_hint">Enter Meaning</string>
    <string name="save_button_text">Save</string>
    <string name="update_word_hint">Word</string>
    <string name="update_meaning_hint">Meaning</string>
</resources>