<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_name_hint"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meaning_hint"
        android:inputType="text"
        android:layout_below="@id/edit_word"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:layout_below="@id/edit_meaning"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
